<resources>
    <string name="app_name">EmployeeAdmin</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="roles">Roles</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="error_invalid_data">Invalid Form Data.</string>
    <string name="error_delete">Unable to delete the specified record.</string>
    <string name="error_password">Your password and confirmation password do not match.</string>
    <string name="new_user">New User</string>
    <string name="department_list">Department List</string>
    <string name="save_or_update">Save or Update</string>
</resources>